syntax = "proto3";
package rofi.messages;

import "common.proto";


message Joint {
    enum Type {
        UNKNOWN_JOINT = 0;
        RIGID_JOINT = 1;
        ROTATION_JOINT = 2;

    }
    message Limits {
        int32 min = 1;
        int32 max = 2;
    }

    Type type = 1;
    repeated Matrix44 matrices = 2;
    repeated Vector4 axes = 3;
    repeated Limits joint_limits = 4;
    // repeated double positions ???
}
